docs: update docstrings to adhere to Sphinx standards
* Imported annotations from __future__ so that when types are quoted, Sphinx will not unfold in the docs.
* Update links to classes and functions and test to ensure not broken.
* References changed from numbered list to instead reference the last name initials of authors followed by year of publication. For example, the old style was [1] and the new style is [CLRS2009].
* Optional type hint: only use in method and function signatures for arguments that default to None.
* Optional: change docstring Args from variable (str, optional) to variable: Optional;
* Add LaTex math formatting to docstrings to improve presentation and legibility.
* For large modules, add summary of classe and functions in the module docstring, and if appropriate, See Also section.
* Add "Attributes" sections to class docstrings.

Fixes #1

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -30,10 +30,9 @@ help:
 
 
 clean:
-	-rm -rf build/*
+	-rm -rf _build/*
 	-rm -rf ghpages_build
 	-rm -rf auto_examples modules
-	-rm -rf reference/generated reference/algorithms/generated reference/classes/generated reference/readwrite/generated
 
 dist: html
 	test -d build/latex || make latex
